# cmw-vllm

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  UPDATE_SUMMARY.md  pyproject.toml  requirements.txt  test_curl.sh  test_gigachat3_streaming.py  test_gigachat3_streaming_content_after_tool.py  test_gigachat3_streaming_with_content.py  test_qwen3_coder_tool_calls.py  test_tool_calls.py  test_tool_calls_comparison.py  test_vllm_inference.py
.opencode/: README.md
cmw_vllm/: __init__.py  cli.py  disk_space.py  gpu_info.py  health_check.py  logging.py  model_config_patcher.py  model_downloader.py  model_registry.py  model_verifier.py  server_config.py  server_manager.py  vllm_wrapper.py
cmw_vllm/tool_parsers/: __init__.py  gigachat3_tool_parser.py  plugin.py
config/: server_config.yaml.example
docs/: gigachat3_tool_parser.md  installation.md  lmcache_kv_offloading.md  usage.md
examples/: README.md  qwen3_embedding_vllm.py
tests/: __init__.py  test_embedding_reranker.py  test_embedding_reranker_models.py  test_gigachat3_inference_and_tools.py  test_gigachat3_standalone.py  test_gpt_oss_function_calling.py  test_tool_calls.py
