[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmw-vllm"
version = "0.1.0"
description = "vLLM server management tool for CMW projects"
requires-python = ">=3.10"
dependencies = [
    "vllm>=0.6.0",
    "flashinfer-python>=0.5.0",  # High-performance attention kernels for faster inference
    "huggingface-hub>=0.20.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
]
readme = "README.md"
authors = [
    {name = "CMW Team"}
]

[project.scripts]
cmw-vllm = "cmw_vllm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cmw_vllm*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.lint.isort]
known-first-party = ["cmw_vllm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
